# israeli-restaurants

./: LICENSE  README.md  SKILL.md  conftest.py  ontopo-cli  pyproject.toml  restaurants.csv  tabit-cli
tests/: __init__.py  test_csv_validation.py  test_ontopo_cli.py  test_tabit_cli.py
