[project]
name = "israeli-restaurants"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-timeout>=2.4.0",
]

[tool.pytest.ini_options]
markers = [
    "live_api: Tests that hit real APIs (can skip with -m 'not live_api')",
    "slow: Slow tests like batch mode",
]
